RESOLVED FIXED296673
[Navigation API] navigate.back doesn't work in main frame when preceded by navigate.back in child frame
https://bugs.webkit.org/show_bug.cgi?id=296673
Summary [Navigation API] navigate.back doesn't work in main frame when preceded by na...
rupin
Reported 2025-07-29 21:10:45 PDT
[Navigation API] navigate.back doesn't work in main frame when preceded by navigate.back in child frame
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-29 21:10:53 PDT
rupin
Comment 2 2025-07-29 22:20:13 PDT
EWS
Comment 3 2025-08-01 01:14:53 PDT
Committed 298121@main (1ea8636a1baf): <https://commits.webkit.org/298121@main> Reviewed commits have been landed. Closing PR #48703 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.